--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".AddTask"></activity>
+        <activity android:name=".ToDo" />
+        <activity android:name=".TaskManagementActivity" />
+        <activity android:name=".TemperatureActivity" />
         <activity android:name=".CategoriesActivity" />
         <activity android:name=".HomeActivity" />
         <activity android:name=".Password_Reset" />
