--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddTask"></activity>
+        <activity android:name=".CalendarActivity"></activity>
+        <activity android:name=".RateUsActivity" />
+        <activity android:name=".AddTask" />
         <activity android:name=".ToDo" />
         <activity android:name=".TaskManagementActivity" />
         <activity android:name=".TemperatureActivity" />
