--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:11.0.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation  'com.dialog:plus:4+'
+    implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
+    implementation 'android.arch.paging:runtime:2.1.1'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     //noinspection GradleCompatible
     compile 'com.android.support:design:26.1.0'
