--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".specificActivity"></activity>
+        <activity android:name=".SentTasks"></activity>
+        <activity android:name=".SentOrReceived" />
+        <activity android:name=".specificActivity" />
         <activity android:name=".Report" />
         <activity android:name=".CalendarActivity" />
         <activity android:name=".RateUsActivity" />
