--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.4'
+    implementation 'com.google.firebase:firebase-analytics:21.0.0'
     testImplementation 'junit:junit:4.+'
     implementation 'androidx.multidex:multidex:2.0.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -91,8 +93,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:6.2.1'
     implementation 'android.arch.paging:runtime:2.1.1'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-
-
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.android.volley:volley:1.1.1'
     //noinspection GradleCompatible
     compile 'com.android.support:design:26.1.0'
 
