--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.magasin_cms">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -14,7 +17,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SentTasks"></activity>
+        <activity android:name=".AllReceivedTasksActivity"></activity>
+        <activity android:name=".Registred_Workers" />
+        <activity android:name=".NotificationActivity" />
+        <activity android:name=".SentTasks" />
         <activity android:name=".SentOrReceived" />
         <activity android:name=".specificActivity" />
         <activity android:name=".Report" />
@@ -22,7 +28,7 @@
         <activity android:name=".RateUsActivity" />
         <activity android:name=".AddTask" />
         <activity android:name=".ToDo" />
-        <activity android:name=".TaskManagementActivity" />
+        <activity android:name=".ReceivedTasks" />
         <activity android:name=".TemperatureActivity" />
         <activity android:name=".CategoriesActivity" />
         <activity android:name=".HomeActivity" />
@@ -31,10 +37,21 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="com.google.firebase.MSSAGING_EVENT" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".FirebaseMessagingService"
+            android:exported="true"
+            android:permission="TODO"
+            tools:ignore="ExportedService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
         <meta-data
             android:name="preloaded_fonts"
