--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,12 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
+   id 'com.google.gms.google-services'
+
 }
 
 android {
     compileSdkVersion 31
-    buildToolsVersion "30.0.3"
+    buildToolsVersion '30.0.3'
 
 
     defaultConfig {
@@ -36,7 +37,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'com.google.firebase:firebase-auth:21.0.1'
+   implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'com.google.firebase:firebase-firestore:24.1.0'
     implementation 'com.google.firebase:firebase-database:20.0.4'
@@ -57,7 +58,7 @@ dependencies {
     implementation 'com.karumi:dexter:6.0.2'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
-
+    implementation 'com.jjoe64:graphview:4.2.2'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.google.android.material:material:1.2.0-alpha05'
 
