--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name="androidx.multidex.MultiDexApplication"
@@ -18,14 +18,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AllReceivedTasksActivity"></activity>
+        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".AllReceivedTasksActivity" />
         <activity android:name=".Registred_Workers" />
         <activity android:name=".NotificationActivity" />
         <activity android:name=".SentTasks" />
         <activity android:name=".SentOrReceived" />
         <activity android:name=".specificActivity" />
         <activity android:name=".Report" />
-        <activity android:name=".CalendarActivity" />
+        <activity android:name=".DiscussionActivity" />
         <activity android:name=".RateUsActivity" />
         <activity android:name=".AddTask" />
         <activity android:name=".ToDo" />
